# asyncapi-autogen

./: .gitignore  LICENSE  lint.sh  pyproject.toml  readme.md  setup.cfg
asyncapi_autogen/: asyncapi_gen.py  message.py
src/asyncapi_autogen/: message.py
tests/: test_asyncapi.py
