[tool.poetry]
name = "asyncapi-autogen"
version = "0.1.0"
description = "Tool for automatically generating asyncapi documentation with dataclasses"
authors = ["Alistair Stark <astark@spiria.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "asyncapi_autogen" }]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pytest = "^7.2.2"
mypy = "^1.0.1"
flake8 = "^6.0.0"
isort = "^5.12.0"
flake8-bugbear = "^23.2.13"
autoflake = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
