[metadata]
license_files = LICENSE

[black]
target-version = ['py310']
line-length = 100

[autoflake]
remove-all-unused-imports = true
remove-unused-variables = true

[isort]
profile = "black"

[mypy]
exclude = "/tests/*"
ignore_missing_imports = true

[flake8]
max-line-length = 100
exclude = '/.venv'